<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginTop="16dp"
        android:text="@string/name_customer" />

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_customer"
        android:inputType="textCapWords" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginTop="16dp"
        android:text="@string/mail_customer" /> 

    <EditText
        android:id="@+id/mail_customer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mail_customer"
        android:inputType="textEmailAddress" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:onClick="addWippedCream"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/wipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/wipped_cream"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="0"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/price"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="$0"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
